Feat: SB 스프링부트 컨트롤러 역활 및 URL 정의

--- a/springboot/demoex/src/main/resources/templates/sports.html
+++ b/springboot/demoex/src/main/resources/templates/sports.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>스포츠</title>
 </head>
 <body>
-  홈페이지 (SSR 랜더링 방식) 2
+    스포츠 뉴스
 </body>
 </html>
