Feat: SB 타임리프, 템플릿 설명및 적용

--- a/springboot/demoex/src/main/resources/templates/board/post_detail_content.html
+++ b/springboot/demoex/src/main/resources/templates/board/post_detail_content.html
@@ -4,6 +4,7 @@
 
             <div class="row">
                 <div class="col-md-12">
+                    <!-- 글 상세보기 뷰 -->
                     <div class="container my-3">
                         <div class="card my-3">
                             <div class="card-header">
@@ -31,6 +32,7 @@
 
                     <!-- 리뷰 목록 노출 -->
                     <div class="container my-3">
+                        <!-- 리뷰-반복문 작성 -->
                         <div class="card my-3 bg-warning">
                             <div class="card-body">
                                 <div class="card-text">
