--- a/springboot/demoex/src/main/resources/templates/board/post_list_content.html
+++ b/springboot/demoex/src/main/resources/templates/board/post_list_content.html
@@ -37,6 +37,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    <!-- 반복문을 통해서 디비의 내용을 가져와서 동적 구성 -->
                                     <tr>
                                         <td>1.</td>
                                         <td><a href="#">음 이번 영화는</a></td>
