--- a/springboot/demoex/src/main/resources/templates/lib/layout.html
+++ b/springboot/demoex/src/main/resources/templates/lib/layout.html
@@ -1,4 +1,4 @@
-<!--/* 모든 페이지에 공통으로 적용되는 레이아웃 */-->
+<!--/* 모든 페이지에 공통으로 적용되는 레이아웃, 타임리프 주석 - 개발자만 볼수 있음 */-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
