Feat: SB 타임리프 URL에 각각 적합한 html 조정

--- a/springboot/demoex/src/main/resources/templates/lib/left_sidebar.html
+++ b/springboot/demoex/src/main/resources/templates/lib/left_sidebar.html
@@ -19,7 +19,7 @@
         <nav class="mt-2">
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <li class="nav-item menu-open">
-              <a href="#" class="nav-link active">
+              <a href="/dashboard" class="nav-link active">
                 <i class="nav-icon fas fa-tachometer-alt"></i>
                 <p>
                   Dashboard
@@ -28,31 +28,31 @@
               </a>
               <ul class="nav nav-treeview">
                 <li class="nav-item">
-                  <a href="/ui/list" class="nav-link active">
+                  <a href="/post/list" class="nav-link active">
                     <i class="far fa-circle nav-icon"></i>
                     <p>글목록-UI</p>
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="/ui/create" class="nav-link active">
+                  <a href="/post/create" class="nav-link active">
                     <i class="far fa-circle nav-icon"></i>
                     <p>글쓰기-UI</p>
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="/ui/modify/1" class="nav-link active">
+                  <a href="/post/modify/1" class="nav-link active">
                     <i class="far fa-circle nav-icon"></i>
                     <p>글수정-UI</p>
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="/ui/detail/1" class="nav-link active">
+                  <a href="/post/detail/1" class="nav-link active">
                     <i class="far fa-circle nav-icon"></i>
                     <p>글상세보기-UI</p>
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="/ui/review/modify/1" class="nav-link active">
+                  <a href="/review/modify/1" class="nav-link active">
                     <i class="far fa-circle nav-icon"></i>
                     <p>리뷰수정-UI</p>
                   </a>
