Feat: SB JPA 게시판 상세보기 수정, 삭제 링크 처리

--- a/springboot/demoex/src/main/resources/templates/board/post_detail_content.html
+++ b/springboot/demoex/src/main/resources/templates/board/post_detail_content.html
@@ -18,8 +18,8 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="#" class="btn btn-success btn-sm">수정</a>
-                        <a href="#" class="btn btn-danger btn-sm">삭제</a>
+                        <a th:href="|/post/modify/${post.getId()}|" class="btn btn-success btn-sm">수정</a>
+                        <a th:href="|/post/delete/${post.getId()}|" class="btn btn-danger btn-sm">삭제</a>
 
                     </div>
 
