--- a/springboot/demoex/src/main/resources/templates/board/post_list_content.html
+++ b/springboot/demoex/src/main/resources/templates/board/post_list_content.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn btn-dark">글 작성하기</a>
+            <a th:href="@{/post/create}" class="btn btn-dark">글 작성하기</a>
 
         </div><!-- /.container-fluid -->
     </section>
