--- a/springboot/demoex/src/main/resources/templates/board/post_list_content.html
+++ b/springboot/demoex/src/main/resources/templates/board/post_list_content.html
@@ -61,6 +61,7 @@
                 </div>
             </div>
             <a th:href="@{/post/create}" class="btn btn-dark">글 작성하기</a>
+            <a th:href="@{/post/create2}" class="btn btn-dark">글 작성하기 + 유효성 검증기능추가</a>
 
         </div><!-- /.container-fluid -->
     </section>
