--- a/springboot/demoex/src/main/resources/templates/board/post_detail.html
+++ b/springboot/demoex/src/main/resources/templates/board/post_detail.html
@@ -6,6 +6,11 @@
   <div th:replace="lib/left_sidebar.html :: frag_left_sidebar"></div>
   <div th:replace="board/post_detail_content.html :: frag_content"></div>
   <div th:replace="lib/footer.html :: frag_footer"></div>
+  <script>
+    // 리뷰 작성시 입력폼에 대한 검사 수행
+    const reviewForm = $('#reviewForm');
+    console.log("리뷰폼", reviewForm);
+  </script>
 </div>
 
 </html>
