--- a/springboot/demoex/src/main/resources/templates/board/post_detail_content.html
+++ b/springboot/demoex/src/main/resources/templates/board/post_detail_content.html
@@ -38,7 +38,8 @@
                                     - 순수 JS or jQuery 같은 라이브러리 사용
                                     - </body> 닫히기 직전, 혹은 해당 코드 바로밑에서 사용가능
                             -->
-                            <input type="text" name="content" id="content" required/>
+                            <input type="text" name="content" id="content" />
+<!--                            <input type="text" name="content" id="content" required/>-->
                             <input type="submit" value="리뷰 등록"/>
                         </form>
                     </div>
