Feat: SB 게시판 수정하기 화면 세팅

--- a/springboot/demoex/src/main/resources/templates/board/post_detail.html
+++ b/springboot/demoex/src/main/resources/templates/board/post_detail.html
@@ -16,7 +16,7 @@
         // 2. 값 체크
         const reviewValue = $('#reviewForm').val(); // trim() 공백제거
         console.log("입력값", reviewValue, reviewValue);
-        //if (reviewValue === '' || reviewValue > 256 ) { // 빈값
+        //if (reviewValue === ''  ) { // 빈값
         // 길이 체크 추가하여 반영
         if (reviewValue === ''){
           return false;
