--- a/springboot/demoex/src/main/resources/templates/lib/layout.html
+++ b/springboot/demoex/src/main/resources/templates/lib/layout.html
@@ -9,6 +9,7 @@
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <link rel="stylesheet" href="/plugins/fontawesome-free/css/all.min.css">
   <link rel="stylesheet" href="/dist/css/adminlte.min.css">
+  <!-- 페이지별로 JS를 무난하게 적용하기 위해 위치를 head 쪽으로 조정함 -->
   <script src="/plugins/jquery/jquery.min.js"></script>
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
