--- a/springboot/demoex/src/main/resources/templates/board/post_detail.html
+++ b/springboot/demoex/src/main/resources/templates/board/post_detail.html
@@ -8,20 +8,21 @@
   <div th:replace="lib/footer.html :: frag_footer"></div>
   <script>
     // 리뷰 작성시 입력폼에 대한 검사 수행
-    //const reviewForm = $('#reviewForm');
-    //console.log("리뷰폼", reviewForm);
     $('#reviewForm').on('submit', (e) => {
-        // 1. submit 이벤트 무효화
-        e.preventDefault();
+        // 1. submit 이벤트 무효화 (임시)
+        // e.preventDefault();
         // 2. 값 체크
-        const reviewValue = $('#reviewForm').val(); // trim() 공백제거
-        console.log("입력값", reviewValue, reviewValue);
-        //if (reviewValue === ''  ) { // 빈값
-        // 길이 체크 추가하여 반영
-        if (reviewValue === ''){
+        const reviewValue = $('#content').val().trim(); //공백제거
+        console.log("입력값", reviewValue, reviewValue.length);
+
+        // 3. 길이 체크 추가하여 반영, 빈값
+        if (reviewValue === ''  || reviewValue.length > 256) {
+          alert("정확하게 입력하세요");
           return false;
         }
-        return true;
+
+        // 4. 리뷰 등록 처리 진행
+        //return true;
     });
 
   </script>
