--- a/springboot/demoex/src/main/resources/templates/board/post_detail_content.html
+++ b/springboot/demoex/src/main/resources/templates/board/post_detail_content.html
@@ -27,7 +27,9 @@
                     <div class="container my-3">
 
                         <p class="border-bottom py-2 my-3">리뷰 등록</p>
-                        <form action="#" method="post" id="reviewForm">
+                        <!--/* 리뷰등록 url 적용 *-->
+                        <form th:action="@{|/review/create/${post.getId()} |}"
+                              method="post" id="reviewForm">
                             <!--
                                 - 프런트에서 유효성 점검
                                 - html5에서 추가된 입력 속성중 필수 입력 옵션 적용, 빈값체크
